--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "react-scripts": "^5.0.1",
+    "styled-component": "^2.8.0",
+    "styled-components": "^6.1.8",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
